--- a/src/test/resources/db.properties
+++ b/src/test/resources/db.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost:3306/all_slabbed_out_db
-db.user=root
-db.password=root
+db.url=jdbc:h2:mem:test_ims?serverTimezone=UTC;DB_CLOSE_DELAY=-1
+db.user=sa
+db.password=
